apps/homeassistant/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: homeassistant
spec:
  selector:
    matchLabels:
      app: homeassistant
  serviceName: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      hostNetwork: true
      containers:
        - image: ghcr.io/home-assistant/home-assistant:2026.4.1
          name: homeassistant
          ports:
            - containerPort: 8123
              name: http
          resources:
            requests:
              cpu: 1000m
              memory: 1024Mi
            limits:
              cpu: 2000m
              memory: 4096Mi
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: config
              mountPath: /config
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
      volumes:
        - name: localtime
          hostPath:
            path: /etc/localtime
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
        storageClassName: longhorn
