apps/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
spec:
  externalName: homeassistant.lan
  ports:
    - name: http
      port: 8123
  type: ExternalName
